@@ -100,6 +100,14 @@ Written by Cory Nelson.</p>
 <td><div class="image first last"><img alt="arctic_thumb.png" class="first last" src="arctic_thumb.png" /></div>
 </td>
 </tr>
+<tr><td><p class="first"><strong>deluge torrent</strong></p>
+<p class="last"><a class="reference" href="http://code.google.com/p/deluge-torrent/">deluge Torrent</a> is a more full-featured yet still lightweight bittorrent
+client. It has the ability to automatically resume partial downloads and
+background to the system tray.</p>
+</td>
+<td><div class="image first last"><img alt="gtorrent_thumb.jpg" class="first last" src="gtorrent_thumb.jpg" /></div>
+</td>
+</tr>
 <tr><td><p class="first"><strong>ZipTorrent</strong></p>
 <p class="last"><a class="reference" href="http://www.ziptorrent.com/">ZipTorrent</a> is another windows
 bittorrent client with
